Creacion CRUD usuarios, vista listado, lectura, modificacion y borrado con errores. Filtrado admin

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -18,3 +18,13 @@ a:hover {
 a:active {
     background-color: rgb(231, 14, 14);
 }
+
+table {
+    border: 1px solid black;
+}
+
+td {
+    padding: 10px;
+    border-right: 1px solid black;
+    border-bottom: 1px solid rgba(85, 85, 85, 0.61);
+}
