Completada función editar canción, creada función eliminar y todo el CRUD de Genero, añadidas canciones a perfil y a genero filtradas por este

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -2,11 +2,11 @@
 /* @import "../css/yourfile.css"; */
 @import url(form.css);
 
-
-
 a {
     text-decoration: none;
     color: black;
+    height: 100%;
+    width: 100%;
 }
 
 a:hover {
