--- a/public/css/form.css
+++ b/public/css/form.css
@@ -5,3 +5,26 @@ form>* {
 button {
     margin: 10px
 }
+
+a {
+    height: 100%;
+    width: 100%;
+    display: block;
+}
+
+#destroy {
+    background: none;
+    color: inherit;
+    border: none;
+    padding: 0;
+    font: inherit;
+    cursor: pointer;
+    outline: inherit;
+    margin: 0 !important;
+}
+
+#destroy:hover {
+    background-color: #0093E9;
+    background-image: linear-gradient(348deg, #0093E9 0%, #80D0C7 100%);
+    color: white;
+}
