--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -29,3 +29,8 @@ td {
     border-bottom: 1px solid rgba(85, 85, 85, 0.61);
 }
 
+td>img {
+    height: 100px;
+    width: 100px;
+    object-fit: cover;
+}
