--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11,8 +11,7 @@ a {
 
 a:hover {
     background-color: #0093E9;
-    background-image: linear-gradient(348deg, #0093E9 0%, #80D0C7 100%);
-    color: white;
+    color: black;
 }
 
 a:active {
