--- a/resources/css/form.css
+++ b/resources/css/form.css
@@ -1,5 +1,5 @@
 form>* {
-    margin: 5px 0;
+    margin: 10px 0;
 }
 
 button {
@@ -27,4 +27,123 @@ a {
     background-color: #0093E9;
     background-image: linear-gradient(348deg, #0093E9 0%, #80D0C7 100%);
     color: white;
+}
+
+.image-upload>input {
+    display: none;
+}
+
+#iconUpload {
+    border: 10px solid black;
+    width: 200px;
+    height: 200px;
+    margin: 10px 0;
+    padding: 0 20px;
+    border-radius: 50%;
+    font-size: 100px;
+    cursor: pointer;
+}
+
+#iconUpload:hover {
+    color: rgb(255, 255, 255);
+    text-shadow:
+        0 0 7px rgb(255, 255, 255),
+        0 0 10px rgb(255, 255, 255),
+        0 0 21px rgb(255, 255, 255),
+        0 0 42px rgb(236, 240, 239),
+        0 0 82px rgb(233, 240, 238),
+        0 0 92px rgb(239, 241, 241),
+        0 0 102px rgb(224, 233, 230),
+        0 0 151px rgb(236, 241, 240);
+
+    background: rgb(34, 36, 41);
+    background: linear-gradient(149deg, rgba(34, 36, 41, 1) 24%, rgb(69, 69, 73) 100%);
+}
+
+#iconUpload:active {
+    color: rgb(108, 17, 194);
+    text-shadow:
+        0 0 7px rgb(255, 255, 255),
+        0 0 10px rgb(255, 255, 255),
+        0 0 21px rgb(255, 255, 255),
+        0 0 42px rgb(236, 240, 239),
+        0 0 82px rgb(233, 240, 238),
+        0 0 92px rgb(239, 241, 241),
+        0 0 102px rgb(224, 233, 230),
+        0 0 151px rgb(236, 241, 240);
+
+    background: rgb(34, 36, 41);
+    background: linear-gradient(149deg, rgba(34, 36, 41, 1) 24%, rgb(69, 69, 73) 100%);
+}
+
+#musicFile {
+    visibility: hidden;
+}
+
+select {
+    border: 3px solid black;
+    border-radius: 10px 5px;
+    cursor: pointer;
+    width: 200px;
+
+    text-align: center;
+    color: rgb(255, 255, 255);
+
+
+    background: rgb(34, 36, 41);
+    background: linear-gradient(149deg, rgba(34, 36, 41, 1) 24%, rgb(69, 69, 73) 100%);
+}
+
+option {
+    color: black !important;
+}
+
+form>button {
+    color: white;
+    height: 40px;
+    background-color: #222429;
+    width: 100px;
+    cursor: pointer;
+}
+
+form>button:hover {
+    text-shadow:
+        0 0 7px rgb(116, 74, 231),
+        0 0 10px rgb(116, 74, 231),
+        0 0 21px rgb(116, 74, 231),
+        0 0 42px rgb(116, 74, 231),
+        0 0 82px rgb(69, 5, 245),
+        0 0 92px rgb(69, 5, 245),
+        0 0 102px rgb(69, 5, 245),
+        0 0 151px rgb(69, 5, 245);
+}
+
+#backButton {
+    margin-top: 10px;
+    height: 40px;
+    background-color: #222429;
+    width: 100px;
+    cursor: pointer;
+}
+
+#backButton>a {
+    text-decoration: none;
+    color: rgb(233, 229, 229);
+    width: 100% !important;
+}
+
+#backButton>a:hover {
+    color: rgb(255, 255, 255);
+    text-shadow:
+        0 0 7px rgb(255, 255, 255),
+        0 0 10px rgb(255, 255, 255),
+        0 0 21px rgb(255, 255, 255),
+        0 0 42px rgb(236, 240, 239),
+        0 0 82px rgb(233, 240, 238),
+        0 0 92px rgb(239, 241, 241),
+        0 0 102px rgb(224, 233, 230),
+        0 0 151px rgb(236, 241, 240);
+
+    background: rgb(34, 36, 41);
+    background: linear-gradient(149deg, rgba(34, 36, 41, 1) 24%, rgb(69, 69, 73) 100%);
 }
