--- a/resources/css/song.css
+++ b/resources/css/song.css
@@ -4,3 +4,11 @@
     grid-area: 1 / 1 / 5 / 4;
 }
 
+#add-to-album-modal {
+    display: none;
+    position: fixed;
+    background-color: wheat;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
