--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,7 +1,3 @@
-/* Para importar un css externo */
-/* @import "../css/yourfile.css"; */
-@import url(form.css);
-
 a {
     text-decoration: none;
     color: black;
@@ -10,13 +6,19 @@ a {
 }
 
 a:hover {
-    background-color: #0093E9;
-    background-image: linear-gradient(348deg, #0093E9 0%, #80D0C7 100%);
-    color: white;
-}
+    color: rgb(255, 255, 255);
+    text-shadow:
+        0 0 7px rgb(255, 255, 255),
+        0 0 10px rgb(255, 255, 255),
+        0 0 21px rgb(255, 255, 255),
+        0 0 42px rgb(236, 240, 239),
+        0 0 82px rgb(233, 240, 238),
+        0 0 92px rgb(239, 241, 241),
+        0 0 102px rgb(224, 233, 230),
+        0 0 151px rgb(236, 241, 240);
 
-a:active {
-    background-color: rgb(231, 14, 14);
+    background: rgb(34, 36, 41);
+    background: linear-gradient(149deg, rgba(34, 36, 41, 1) 24%, rgb(69, 69, 73) 100%);
 }
 
 table {
@@ -33,4 +35,34 @@ td>img {
     height: 100px;
     width: 100px;
     object-fit: cover;
+}
+
+#btnCreate {
+    height: 40px;
+    width: 100px;
+    padding: 7px 25px;
+    background-color: #222429;
+    color: rgb(233, 229, 229);
+    text-decoration: none;
+
+    border: 1px solid rgb(199, 180, 180);
+    box-shadow: 10px 5px 5px rgb(201, 200, 200);
+    cursor: pointer;
+}
+
+#backButton {
+    margin-top: 10px;
+    height: 40px;
+    background-color: #222429;
+    width: 100px;
+    cursor: pointer;
+    text-decoration: none;
+    color: white;
+
+    border: 1px solid rgb(199, 180, 180);
+    box-shadow: 10px 5px 5px rgb(201, 200, 200);
+}
+
+#backButton>a {
+    width: 100% !important;
 }
