--- a/resources/css/form.css
+++ b/resources/css/form.css
@@ -1,7 +1,3 @@
-form>* {
-    margin: 10px 0;
-}
-
 button {
     margin: 10px
 }
@@ -12,39 +8,51 @@ a {
     display: block;
 }
 
-#destroy {
-    background: none;
-    color: inherit;
-    border: none;
-    padding: 0;
-    font: inherit;
-    cursor: pointer;
-    outline: inherit;
-    margin: 0 !important;
+#label-file {
+    margin-top: 20px;
 }
 
-#destroy:hover {
-    background-color: #0093E9;
-    background-image: linear-gradient(348deg, #0093E9 0%, #80D0C7 100%);
+input[type=text],
+input[type=email],
+input[type=password] {
+    background: none;
+    border: none;
+    border-bottom: 1px solid white;
     color: white;
 }
 
-.image-upload>input {
-    display: none;
+input[type=text]:active,
+input[type=text]:focus,
+input[type=email]:active,
+input[type=email]:focus,
+input[type=password]:active,
+input[type=password]:focus {
+    background-color: rgba(255, 255, 255, 0.2);
+    border: #540d63;
+}
+
+label {
+    color: white;
+    font-weight: bold;
 }
 
 #iconUpload {
     border: 10px solid black;
-    width: 200px;
-    height: 200px;
-    margin: 10px 0;
     padding: 0 20px;
     border-radius: 50%;
     font-size: 100px;
     cursor: pointer;
+
+    background: none;
 }
 
-#iconUpload:hover {
+#iconUploadHover {
+    border: 10px solid black;
+    padding: 0 20px;
+    border-radius: 50%;
+    font-size: 100px;
+    cursor: pointer;
+
     color: rgb(255, 255, 255);
     text-shadow:
         0 0 7px rgb(255, 255, 255),
@@ -60,24 +68,16 @@ a {
     background: linear-gradient(149deg, rgba(34, 36, 41, 1) 24%, rgb(69, 69, 73) 100%);
 }
 
-#iconUpload:active {
-    color: rgb(108, 17, 194);
-    text-shadow:
-        0 0 7px rgb(255, 255, 255),
-        0 0 10px rgb(255, 255, 255),
-        0 0 21px rgb(255, 255, 255),
-        0 0 42px rgb(236, 240, 239),
-        0 0 82px rgb(233, 240, 238),
-        0 0 92px rgb(239, 241, 241),
-        0 0 102px rgb(224, 233, 230),
-        0 0 151px rgb(236, 241, 240);
-
-    background: rgb(34, 36, 41);
-    background: linear-gradient(149deg, rgba(34, 36, 41, 1) 24%, rgb(69, 69, 73) 100%);
-}
-
-#musicFile {
-    visibility: hidden;
+#musicFile,
+#imgFile,
+#imgFileUsr {
+    opacity: 0;
+    position: relative;
+    top: -150px;
+    height: 160px;
+    width: 160px;
+    margin-bottom: -160px;
+    cursor: pointer;
 }
 
 select {
@@ -98,6 +98,19 @@ option {
     color: black !important;
 }
 
+form {
+    width: 40%;
+    background-color: #754f7d;
+    padding: 30px;
+    border-radius: 25px;
+    border: black;
+    box-shadow: 10px 5px 5px black;
+}
+
+form>* {
+    margin: 10px 0;
+}
+
 form>button {
     color: white;
     height: 40px;
@@ -108,14 +121,14 @@ form>button {
 
 form>button:hover {
     text-shadow:
-        0 0 7px rgb(116, 74, 231),
-        0 0 10px rgb(116, 74, 231),
-        0 0 21px rgb(116, 74, 231),
-        0 0 42px rgb(116, 74, 231),
-        0 0 82px rgb(69, 5, 245),
-        0 0 92px rgb(69, 5, 245),
-        0 0 102px rgb(69, 5, 245),
-        0 0 151px rgb(69, 5, 245);
+        0 0 7px rgb(255, 255, 255),
+        0 0 10px rgb(255, 255, 255),
+        0 0 21px rgb(255, 255, 255),
+        0 0 42px rgb(236, 240, 239),
+        0 0 82px rgb(233, 240, 238),
+        0 0 92px rgb(239, 241, 241),
+        0 0 102px rgb(224, 233, 230),
+        0 0 151px rgb(236, 241, 240);
 }
 
 #backButton {
@@ -124,6 +137,9 @@ form>button:hover {
     background-color: #222429;
     width: 100px;
     cursor: pointer;
+
+    border: 1px solid rgb(199, 180, 180);
+    box-shadow: 10px 5px 5px rgb(201, 200, 200);
 }
 
 #backButton>a {
