--- a/resources/css/profile.css
+++ b/resources/css/profile.css
@@ -1,14 +1,11 @@
 img {
-    height: 30vh;
-    width: 100%;
+    height: 35vh;
+    width: 35vw;
     object-fit: contain;
 }
 
-.col-6 {
-    height: fit-content;
-}
-
 #parent {
+    margin-bottom: -80px;
     display: grid;
     grid-template-columns: repeat(5, 1fr);
     grid-template-rows: repeat(5, 1fr);
@@ -27,6 +24,33 @@ img {
 #buttons {
     grid-area: 4 / 4 / 5 / 6;
 }
+
+button {
+    padding: 15px 32px;
+    background-color: black;
+    color: white;
+    display: inline-block;
+    border: none;
+}
+
+button:hover,
+input:hover,
+a:hover {
+    color: rgb(255, 255, 255);
+    text-shadow:
+        0 0 7px rgb(255, 255, 255),
+        0 0 10px rgb(255, 255, 255),
+        0 0 21px rgb(255, 255, 255),
+        0 0 42px rgb(236, 240, 239),
+        0 0 82px rgb(233, 240, 238),
+        0 0 92px rgb(239, 241, 241),
+        0 0 102px rgb(224, 233, 230),
+        0 0 151px rgb(236, 241, 240);
+
+    background: rgb(34, 36, 41);
+    background: linear-gradient(149deg, rgba(34, 36, 41, 1) 24%, rgb(69, 69, 73) 100%);
+}
+
 
 .campo {
     display: flex;
@@ -51,7 +75,10 @@ img {
     line-height: 1.2;
 }
 
-audio {
-    display: flex;
-    align-items: center;
+#buttons>form>* {
+    padding: 15px 32px;
+    background-color: black;
+    color: white;
+    display: inline-block;
+    border: none;
 }
