--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,10 +1,3 @@
-a {
-    text-decoration: none;
-    color: black;
-    height: 100%;
-    width: 100%;
-}
-
 a:hover {
     color: rgb(255, 255, 255);
     text-shadow:
@@ -37,7 +30,7 @@ td>img {
     object-fit: cover;
 }
 
-#btnCreate {
+#btn-create {
     height: 40px;
     width: 100px;
     padding: 7px 25px;
@@ -50,19 +43,21 @@ td>img {
     cursor: pointer;
 }
 
-#backButton {
+.back-button {
     margin-top: 10px;
     height: 40px;
     background-color: #222429;
-    width: 100px;
+    width: fit-content;
     cursor: pointer;
     text-decoration: none;
     color: white;
-
     border: 1px solid rgb(199, 180, 180);
     box-shadow: 10px 5px 5px rgb(201, 200, 200);
+    margin-right: 5px;
 }
 
-#backButton>a {
+.back-button>a {
     width: 100% !important;
+    text-decoration: none;
+    color: white;
 }
