--- a/resources/css/profile.css
+++ b/resources/css/profile.css
@@ -5,7 +5,7 @@ img {
 }
 
 #parent {
-    margin-bottom: -80px;
+    /* margin-bottom: -80px; */
     display: grid;
     grid-template-columns: repeat(5, 1fr);
     grid-template-rows: repeat(5, 1fr);
@@ -21,10 +21,57 @@ img {
     grid-area: 1 / 4 / 4 / 6;
 }
 
+
 #buttons,
 #back-buttons {
     grid-area: 4 / 4 / 5 / 6;
     overflow: auto;
+}
+
+#follows {
+    grid-area: 5 / 1 / 6 / 6;
+}
+
+#follows>div:first-of-type {
+    width: 65%;
+}
+
+#follows>div:last-of-type {
+    width: 30%;
+}
+
+.follow {
+    width: 100%;
+    height: 50px;
+    text-decoration: none;
+    font-weight: bold;
+    border-radius: 25px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    border: 2px black solid;
+    color: black;
+    background-color: white;
+    cursor: pointer;
+}
+
+.follow:hover {
+    color: white !important;
+    background-color: #6c0f8e !important;
+}
+
+.unfollow {
+    border: 2px white solid;
+    color: white;
+    background-color: black;
+}
+
+.unfollow:hover {
+    border: 2px rgb(255, 0, 0) solid;
+    color: white;
+    background-color: rgb(119, 21, 21) !important;
 }
 
 button {
@@ -89,6 +136,19 @@ a:hover {
 .campo>h6 {
     font-weight: bold;
     margin-right: 5px;
+}
+
+.campo>h6:nth-of-type(2) {
+    width: 80%;
+}
+
+.campo>h6>a {
+    width: 100%;
+    height: 100%;
+    text-decoration: none;
+    background: rgb(34, 36, 41);
+    color: #fff;
+    display: block;
 }
 
 .campo>p {
