--- a/resources/css/form.css
+++ b/resources/css/form.css
@@ -1,4 +1,7 @@
-button {
+
+
+
+/* button {
     margin: 10px
 }
 
@@ -175,4 +178,4 @@ form>button:hover {
 
     background: rgb(34, 36, 41);
     background: linear-gradient(149deg, rgba(34, 36, 41, 1) 24%, rgb(69, 69, 73) 100%);
-}
+} */
