--- a/resources/css/list.css
+++ b/resources/css/list.css
@@ -1,3 +1,15 @@
+td {
+    padding: 10px;
+    border-right: 1px solid black;
+    border-bottom: 1px solid rgba(85, 85, 85, 0.61);
+}
+
+td>img {
+    height: 100px;
+    width: 100px;
+    object-fit: cover;
+}
+
 td>button {
     height: fit-content;
     width: fit-content;
@@ -11,20 +23,47 @@ td>form {
 
 
 tr {
-    border-bottom: 2px solid rgba(100, 99, 99, 0.534) !important;
+    /* border-bottom: 2px solid rgba(100, 99, 99, 0.534) !important; */
     text-align: center;
+    font-size: x-large;
+    color: white;
+}
+
+tr:first-of-type {
+    font-weight: bold;
+    text-shadow: 0px 0px 3px white;
+}
+
+tr:nth-child(even) {
+    background-color: #6650a357;
+}
+
+tr:nth-child(odd) {
+    background-color: #c9a2db63;
 }
 
 .tableRow>td>a {
     width: 100%;
     height: 100%;
-    text-decoration: none;
-    background: rgb(34, 36, 41);
-    color: white;
+    background: none;
+    font-weight: bold;
+    text-shadow: 2px 2px 5px black;
 
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.tableRow>td>a:hover {
+    text-shadow:
+        0 0 7px rgb(255, 255, 255),
+        0 0 10px rgb(255, 255, 255),
+        0 0 21px rgb(255, 255, 255),
+        0 0 42px rgb(236, 240, 239),
+        0 0 82px rgb(233, 240, 238),
+        0 0 92px rgb(239, 241, 241),
+        0 0 102px rgb(224, 233, 230),
+        0 0 151px rgb(236, 241, 240);
 }
 
 #edit,
@@ -67,4 +106,12 @@ audio {
 
 #buttons-songs-albums {
     width: 100%;
+}
+
+.music-player>* {
+    width: 182px;
+}
+
+.p-5 {
+    background-color: #1d1b1ef0 !important;
 }
