--- a/resources/css/reproductor.css
+++ b/resources/css/reproductor.css
@@ -15,9 +15,9 @@
     --buffered-width: 0%;
     position: relative;
     margin: 0;
-    width: 95%;
+    width: 100%;
     height: 132px;
-    background: #fff;
+    background: linear-gradient(to bottom right, #000000e8 0%, #cd60ff91 100%);
 }
 
 #audio-player-container::before {
@@ -27,7 +27,9 @@
     height: calc(100% + 4px);
     left: -2px;
     top: -2px;
-    background: linear-gradient(to left, #007db5, #ff8a00);
+
+    background: linear-gradient(to left, #000000e8 0%, #cd60ff91 100%);
+
     z-index: -1;
 }
 
@@ -38,7 +40,6 @@
     padding: 0 5px;
     margin: 0;
     font-size: 28px;
-    background: #fff;
 }
 
 #play-icon {
@@ -46,7 +47,7 @@
 }
 
 path {
-    stroke: #007db5;
+    stroke: #9b0fc5;
 }
 
 .time {
@@ -63,26 +64,31 @@ output {
     width: 32px;
     text-align: center;
     font-size: 20px;
-    margin: 10px 2.5% 0 5%;
+    margin: 10px 1.5% 0 5%;
     float: left;
     clear: left;
 }
 
+#seek-slider {
+    background-color: transparent;
+}
+
 #volume-slider {
     margin: 10px 2.5%;
-    width: 58%;
+    width: 75%;
+    background-color: transparent;
 }
 
 #volume-slider::-webkit-slider-runnable-track {
-    background: rgba(0, 125, 181, 0.6);
+    background: #9b0fc58c;
 }
 
 #volume-slider::-moz-range-track {
-    background: rgba(0, 125, 181, 0.6);
+    background: #9b0fc58c;
 }
 
 #volume-slider::-ms-fill-upper {
-    background: rgba(0, 125, 181, 0.6);
+    background: #9b0fc58c;
 }
 
 #volume-slider::before {
@@ -96,7 +102,8 @@ output {
 input[type="range"] {
     position: relative;
     -webkit-appearance: none;
-    width: 48%;
+    /* width: 48%; */
+    width: 75%;
     margin: 0;
     padding: 0;
     height: 19px;
@@ -109,8 +116,10 @@ input[type="range"]::-webkit-slider-runnable-track {
     width: 100%;
     height: 3px;
     cursor: pointer;
+
     background: linear-gradient(to right, rgba(0, 125, 181, 0.6) var(--buffered-width), rgba(0, 125, 181, 0.2) var(--buffered-width));
 }
+
 
 input[type="range"]::before {
     position: absolute;
@@ -119,7 +128,8 @@ input[type="range"]::before {
     left: 0;
     width: var(--seek-before-width);
     height: 3px;
-    background-color: #007db5;
+    background-color: #9b0fc5;
+
     cursor: pointer;
 }
 
@@ -127,7 +137,7 @@ input[type="range"]::-webkit-slider-thumb {
     position: relative;
     -webkit-appearance: none;
     box-sizing: content-box;
-    border: 1px solid #007db5;
+    border: 1px solid #9b0fc5;
     height: 15px;
     width: 15px;
     border-radius: 50%;
@@ -138,7 +148,7 @@ input[type="range"]::-webkit-slider-thumb {
 
 input[type="range"]:active::-webkit-slider-thumb {
     transform: scale(1.2);
-    background: #007db5;
+    background: #9b0fc5;
 }
 
 input[type="range"]::-moz-range-track {
@@ -158,7 +168,7 @@ input[type="range"]::-moz-focus-outer {
 
 input[type="range"]::-moz-range-thumb {
     box-sizing: content-box;
-    border: 1px solid #007db5;
+    border: 1px solid #9b0fc5;
     height: 15px;
     width: 15px;
     border-radius: 50%;
@@ -168,7 +178,7 @@ input[type="range"]::-moz-range-thumb {
 
 input[type="range"]:active::-moz-range-thumb {
     transform: scale(1.2);
-    background: #007db5;
+    background: #9b0fc5;
 }
 
 input[type="range"]::-ms-track {
@@ -181,7 +191,7 @@ input[type="range"]::-ms-track {
 }
 
 input[type="range"]::-ms-fill-lower {
-    background-color: #007db5;
+    background-color: #9b0fc5;
 }
 
 input[type="range"]::-ms-fill-upper {
@@ -190,7 +200,7 @@ input[type="range"]::-ms-fill-upper {
 
 input[type="range"]::-ms-thumb {
     box-sizing: content-box;
-    border: 1px solid #007db5;
+    border: 1px solid #9b0fc5;
     height: 15px;
     width: 15px;
     border-radius: 50%;
@@ -200,5 +210,28 @@ input[type="range"]::-ms-thumb {
 
 input[type="range"]:active::-ms-thumb {
     transform: scale(1.2);
-    background: #007db5;
+    background: #9b0fc5;
+}
+
+
+#campo-likes {
+    font-size: xx-large;
+}
+
+#campo-likes>a {
+    background-color: transparent;
+    color: red !important;
+}
+
+#campo-likes>a:hover {
+    background: none !important;
+    text-shadow:
+        0 0 7px rgb(255, 0, 0),
+        0 0 10px rgb(255, 0, 0),
+        0 0 21px rgb(255, 0, 0),
+        0 0 42px rgb(226, 0, 0),
+        0 0 82px rgb(226, 0, 0),
+        0 0 92px rgb(226, 0, 0),
+        0 0 102px rgb(207, 14, 14),
+        0 0 151px rgb(214, 17, 17);
 }
