--- a/resources/css/profile.css
+++ b/resources/css/profile.css
@@ -216,3 +216,48 @@ a:hover {
 .p-5 {
     height: auto !important;
 } */
+
+#songs-genre {
+    grid-area: 1 / 1 / 5 / 4;
+}
+
+#info-genre {
+    grid-area: 1 / 4 / 4 / 7;
+}
+
+#buttons-genre {
+    grid-area: 4 / 4 / 5 / 6;
+}
+
+.tableRow {
+    border-bottom: 1px solid rgba(255, 255, 255, 0.308);
+}
+
+tr:first-of-type {
+    font-weight: 700;
+    font-size: x-large;
+    text-shadow: 0px 0px 3px white;
+}
+
+.tableRow>td>a {
+    width: 100%;
+    height: 100%;
+    background: none;
+    font-weight: 700;
+    text-shadow: 2px 2px 5px black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.tableRow>td>a:hover {
+    text-shadow:
+        0 0 7px rgb(255, 255, 255),
+        0 0 10px rgb(255, 255, 255),
+        0 0 21px rgb(255, 255, 255),
+        0 0 42px rgb(236, 240, 239),
+        0 0 82px rgb(233, 240, 238),
+        0 0 92px rgb(239, 241, 241),
+        0 0 102px rgb(224, 233, 230),
+        0 0 151px rgb(236, 241, 240);
+}
