--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -72,91 +72,30 @@ a:hover {
     text-align: center;
 }
 
-/*
-.container {
-    border-radius: 35px;
+@media screen and (max-width: 850px) {
+    .p-5 {
+        width: 100% !important;
+        padding: 1rem !important;
+    }
+
+    .p-5>* {
+        flex-direction: column;
+    }
+
+    .cancion-landing {
+        width: 100% !important;
+        height: 300px;
+    }
+
+    #crud-links {
+        flex-direction: column;
+    }
+
+    #crud-links>a {
+        margin: 10px 0;
+        width: 200px;
+        height: 50px;
+        padding: 5px;
+    }
+
 }
-
-body {
-    min-height: 100% !important;
-    background-image: linear-gradient(to right bottom, #ffd6ff, #f7cfff, #eec9fe, #e4c3ff, #d9bdff, #d1bdff, #cabdff, #c2bdff, #bfc2ff, #bcc7ff, #bbccff, #bbd0ff);
-    background-size: 100vw 150vh;
-}
-
-.container {
-    background-color: #e8e8f152;
-    backdrop-filter: blur(5px);
-}
-
-a:hover {
-    color: rgb(255, 255, 255);
-    text-shadow:
-        0 0 7px rgb(255, 255, 255),
-        0 0 10px rgb(255, 255, 255),
-        0 0 21px rgb(255, 255, 255),
-        0 0 42px rgb(236, 240, 239),
-        0 0 82px rgb(233, 240, 238),
-        0 0 92px rgb(239, 241, 241),
-        0 0 102px rgb(224, 233, 230),
-        0 0 151px rgb(236, 241, 240);
-
-    background: rgb(34, 36, 41);
-    background: linear-gradient(149deg, rgba(34, 36, 41, 1) 24%, rgb(69, 69, 73) 100%);
-}
-
-#songs-list {
-    scrollbar-width: thin;
-    scrollbar-color: rgb(42, 42, 43) rgba(255, 255, 255, 0.192);
-}
-
-table {
-    border: 1px solid black;
-}
-
-td {
-    padding: 10px;
-    border-right: 1px solid black;
-    border-bottom: 1px solid rgba(85, 85, 85, 0.61);
-}
-
-td>img {
-    height: 100px;
-    width: 100px;
-    object-fit: cover;
-}
-
-#btn-create {
-    height: 40px;
-    width: 100px;
-    padding: 7px 25px;
-    background-color: #222429;
-    color: rgb(233, 229, 229);
-    text-decoration: none;
-
-    border: 1px solid rgb(199, 180, 180);
-    box-shadow: 10px 5px 5px rgb(201, 200, 200);
-    cursor: pointer;
-}
-
-.back-button {
-    margin-top: 10px;
-    height: 40px;
-    background-color: #222429;
-    width: fit-content;
-    cursor: pointer;
-    text-decoration: none;
-    color: white;
-    border: 1px solid rgb(199, 180, 180);
-    box-shadow: 10px 5px 5px rgb(201, 200, 200);
-    margin-right: 5px;
-}
-
-.back-button>a {
-    width: 100% !important;
-    text-decoration: none;
-    color: white;
-}
-
-.col-2 {
-    width: 18% !important;
-} */
