--- a/resources/css/list.css
+++ b/resources/css/list.css
@@ -93,7 +93,7 @@ audio {
     visibility: hidden;
 }
 
-#btnCreateAlbumShow {
+#btn-create-album-show {
     height: 50px;
     width: 200px;
     margin: 5px 0;
@@ -114,4 +114,15 @@ audio {
 
 .p-5 {
     background-color: #1d1b1ef0 !important;
+}
+
+@media screen and (max-width: 850px) {
+
+    .p-5 {
+        overflow: scroll;
+    }
+
+    #btn-create {
+        width: 100px;
+    }
 }
