--- a/resources/css/song.css
+++ b/resources/css/song.css
@@ -37,7 +37,7 @@
     border-radius: 20px;
     border: 4px solid black;
     padding: 20px;
-    width: 75%;
+    width: 400px;
 
     flex-direction: column;
     justify-content: center;
