--- a/resources/css/profile.css
+++ b/resources/css/profile.css
@@ -256,8 +256,15 @@ tr:first-of-type {
         0 0 151px rgb(236, 241, 240);
 }
 
+@media screen and (min-width: 800) and (max-width: 1280px) {
 
-@media screen and (max-width: 850px) {
+    #avatar {
+        grid-area: 1 / 1 / 3 / 2;
+    }
+}
+
+
+@media screen and (max-width: 800px) {
 
     #parent-profile {
         grid-template-columns: repeat(2, 1fr);
@@ -293,6 +300,7 @@ tr:first-of-type {
 
     .container-table {
         overflow: scroll;
+        overflow-y: hidden;
     }
 
     #buttons-songs-albums {
